--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-request-context": "^1.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
