--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 APP_PORT=3000
 APP_AUTH_TOKEN=secret
+REDIS_HOST=redis
+REDIS_PORT=6379
+RATE_LIMIT_PER_HOUR_BY_TOKEN=200
+RATE_LIMIT_PER_HOUR_BY_IP=100
