--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
 version: '3.8'
 services:
-  redis:
-    image: redis:6.2.5-alpine
   app:
     build: .
     volumes:
       - .:/app
     ports:
-      - "300:3000"
+      - 3000:3000
     depends_on:
       - redis
     env_file:
       - .env
-
+  redis:
+    image: redis:6.2.5-alpine
+    ports:
+      - 6379:6379
+  
 volumes:
   redis:
     driver: local
