Optimized Redis client and added load test

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=19.0.0"
   },
   "dependencies": {
+    "artillery": "^2.0.0-27",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-request-context": "^1.0.1",
