--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,13 @@ version: '3.8'
 services:
   app:
     build: .
+    restart: unless-stopped
     volumes:
       - .:/app
     ports:
       - 3000:3000
+    links:
+      - redis
     depends_on:
       - redis
     env_file:
