--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "ts-node-dev src/app.ts",
     "lint": "eslint .",
     "format": "prettier-eslint --write src/**/*.ts",
-    "test": "jest"
+    "test": "jest",
+    "test:load": "artillery run tests/load/burst.yml"
   },
   "engines": {
     "node": ">=19.0.0"
